# arch-orange

./: Makefile  README.md  TODO  files-to-divert
KDE-themes/: CMakeLists.txt  Makefile
KDE-themes/libbreezecommon/: CMakeLists.txt
debian/: changelog  control  copyright  gnome-theme-kali.postinst  install  kali-desktop-base.dirs  kali-desktop-base.lintian-overrides  kali-desktop-base.postinst  kali-desktop-base.prerm  kali-theme-common.install  kali-theme.postinst  kali-theme.postrm  kali-theme.preinst  kali-themes-common.dirs  kali-themes-common.install  kali-themes-common.lintian-overrides  kali-themes-common.maintscript  kali-themes-mobile.gsettings-override  kali-themes-mobile.postinst  kali-themes-mobile.postrm  kali-themes-phosh.gsettings-override  kali-themes-purple.gsettings-override  kali-themes-purple.install  kali-themes-purple.links  kali-themes-purple.lintian-overrides  kali-themes-purple.postinst  kali-themes-purple.postrm  kali-themes.gsettings-override  kali-themes.install  kali-themes.lintian-overrides  kali-themes.postinst  kali-themes.postrm  kali-themes.preinst  kali-wallpapers-2020.4.install  kwin-style-kali.install  kwin5-style-kali.install  rules  update-maintainer-scripts
desktop-base/: plymouth
emblems/: emblem-kali-128x128.png.raw  emblem-kali-16x16.png.raw  emblem-kali-22x22.png.raw  emblem-kali-256x256.png.raw  emblem-kali-32x32.png.raw  emblem-kali-36x36.png.raw  emblem-kali-64x64.png.raw
emblems-debian/: Makefile
src/themes/Kali/kwin5/: CMakeLists.txt
src/themes/Kali/kwin5/kdecoration/: CMakeLists.txt  breeze.json
(+225 files in other folders)
